ikwen-utils.js: We can now swipe between content tab panes. hammer.js included to allow the swipe out of edge panels

--- a/accesscontrol/templates/accesscontrol/community.html
+++ b/accesscontrol/templates/accesscontrol/community.html
@@ -195,9 +195,9 @@
                     groupName = $(this).data('name'),
                     count = $('div#' + groupId + ' li.member:not(.tpl)').length;
                 $('div#group-update h5 em').text(groupName);
-                $('div.tab-pane').removeClass('active').hide();
-                $('div#' + groupId).addClass('active').show();
-                if (count > 0) {
+                $('div.tab-pane').removeClass('active');
+                $('div#' + groupId).addClass('active');
+                if (count > 0 && $(window).width() >= 768) {
                     $('div#' + groupId + ' li.member.active').click();
                     return;
                 }
