--- a/static/ikwen/css/admin.css
+++ b/static/ikwen/css/admin.css
@@ -25,7 +25,7 @@ body {font-size: 13px; overflow: hidden}
     float: left;height: 24px;opacity: .5; width: 24px;}
 #selection-control .select-count {float: left; margin-left: 30px}
 #selection-control .actions {float: right}
-#app-nav {border-bottom: 1px solid #eee;border-top: 1px solid #eee;font-weight: 700;height: 45px;margin-top: 47px;padding-top: 10px;position: fixed;width: 100%;z-index: 10;}
+#app-nav {border-bottom: 1px solid #eee;border-top: 1px solid #eee;font-weight: 700;height: 45px;margin-top: 47px;padding-top: 10px;position: fixed;width: 100%;z-index: 12;}
 #app-nav .app-name {display: none}
 #app-nav .app-logo {float: left;height: 30px;width: 30px;margin: 5px 5px 0 0;}
 #app-nav .breadcrumb {background: none;float: left;padding-top: 5px;padding-left: 0;}
@@ -57,7 +57,7 @@ div#container.admin {padding-top: 92px;}
 #admin-content.change-form h3 {font-size: 18px; font-weight: 700}
 #admin-content.change-form h3:first-of-type {margin-top: 0}
 
-#admin-tools {padding: 0 15px;clear: both;position: fixed;width: 100%;background: #fff;}
+#admin-tools {padding: 0 15px;clear: both;position: fixed;width: 100%;background: #fff;z-index: 11;}
 #admin-tools input, #admin-tools select, #admin-tools .btn-sm {border: 1px solid #ddd;font-size: 13px;padding-left: 32px;}
 #context-search {float: left}
 #context-search .glyphicon-search {margin-right: -26px;margin-left: 10px;}
@@ -125,7 +125,7 @@ footer a {color: #999}
 }
 #results {clear: both}
 #admin-tools + #results {margin-top: 20px;}
-.content-tab-list {position: fixed; width: 100%}
+.content-tab-list {position: fixed;width: 100%;z-index: 10;}
 
 .images-uploader .frame {height: 200px;float: left;margin: 0 10px 10px 0;overflow: hidden;width: 100%;}
 .images-uploader .image {background: no-repeat center;border: solid 1px #DBE6FF;margin-right: 10px;}
@@ -146,6 +146,7 @@ footer a {color: #999}
     #admin-tools .glyphicon-menu-left {margin: 2px -24px 0 6px;}
     #admin-tools .tool {display: none}
     #admin-tools input, #admin-tools select, #admin-tools .btn {border: none;margin-top: -4px;width: 200px;background: none;}
+    #admin-tools input:focus {outline: none;}
     #admin-tools .btn:active, #admin-tools .btn.active {background: none; color: #545454; box-shadow: none}
     #context-search .glyphicon-search {
         margin: 2px 0 0;
