--- a/accesscontrol/templates/accesscontrol/community.html
+++ b/accesscontrol/templates/accesscontrol/community.html
@@ -169,6 +169,10 @@
                                             <li role="presentation" class="group {{ group.name }}" data-id="{{ group.id }}" data-name="{{ group.name }}">
                                                 <a href="#">{{ group.name }}</a></li>
                                         {% endfor %}
+                                        {% if user.is_bao %}
+                                            <li role="presentation" class="group {{ sudo_group.name }}" data-id="{{ sudo_group.id }}" data-name="{{ sudo_group.name }}">
+                                                <a href="#">{{ sudo_group.name }}</a></li>
+                                        {% endif %}
                                     </ul>
                                 </div>
                             </div>
