--- a/accesscontrol/templates/accesscontrol/events/access_request.html
+++ b/accesscontrol/templates/accesscontrol/events/access_request.html
@@ -1,5 +1,5 @@
 {% load i18n staticfiles humanize %}
-<div class="col-xs-4 col-sm-3 notice-cnsl" style="text-align: center">
+<div class="col-xs-4 col-sm-3 notice-cnsl swiper-slide" style="text-align: center">
     <a href="{% url 'ikwen:profile' rq.member.id %}">
         {% if rq.member.photo and rq.member.photo.name %}
             <div class="img" style="background-image: url({{ IKWEN_MEDIA_URL }}{{ rq.member.photo.small_name }})"></div>
