--- a/accesscontrol/templates/accesscontrol/profile.html
+++ b/accesscontrol/templates/accesscontrol/profile.html
@@ -70,28 +70,27 @@
                 <div id="cards">
                     {% for elt in access_request_list %}
                         {% with rq=elt.rq srvc=elt.rq.service %}
-                            <section id="{{ elt.rq.id }}" class="access-request subtle-shade">
+                            <section id="{{ elt.rq.id }}" class="access-request card subtle-shade">
                                 <div class="logo">
                                     {% if srvc.config.logo.name %}
                                         <img src="{{ srvc.config.logo.url }}"/>
                                     {% else %}
                                         <img src="{% static 'ikwen/img/logo-placeholder.jpg' %}"/>
                                     {% endif %}
-                                    <h4>{{ srvc.project_name }}</h4>
+                                    <p class="member-name">{{ srvc.project_name }}</p>
                                 </div>
                                 <div class="details row">
                                     <div class="about">
-                                        <div class="col-sm-6 col-md-6">
-                                            <h3>{% trans "Request to join" %}</h3>
+                                        <div class="col-xs-12 col-sm-6">
+                                            <h4 style="margin-top: 0">{% trans "Request to join" %}</h4>
                                             <p>{% trans "This person would like to join your community." %}</p>
                                         </div>
-                                        <div class="col-sm-3 col-md-3">
+                                        <div class="col-xs-6 col-sm-3">
                                             <button class="btn btn-success btn-sm btn-block allow-access"
                                                     data-request-id="{{ rq.id }}"
                                                     data-access-type="{{ rq.type }}">{% trans "Grant access" %}</button>
                                         </div>
-                                        <div class="col-sm-3 col-md-3"
-                                             style="cursor: pointer; font-weight: 700; padding-top: 7px">
+                                        <div class="col-xs-6 col-sm-3" style="cursor: pointer; font-weight: 700; padding-top: 7px">
                                             <span class="text-danger deny-access"
                                                   data-request-id="{{ rq.id }}">{% trans "No, Refuse" %}</span>
                                         </div>
@@ -104,19 +103,24 @@
                                             <h3>{% trans "Add to group ..." %}</h3>
                                             {% for group in elt.groups %}
                                                 <div class="form-group">
-                                                    <div class="radio"><label> <input type="radio" class="group"
-                                                                                      name="group"
-                                                                                      value="{{ group.id }}"/> {{ group.name }}
-                                                    </label></div>
+                                                    <div class="radio">
+                                                        <label>
+                                                            <input type="radio" class="group" name="group" value="{{ group.id }}"/>
+                                                            {{ group.name }}
+                                                        </label>
+                                                    </div>
                                                 </div>
                                             {% endfor %}
                                         </div>
                                         <p class="text-success"
                                            style="display: none">{% trans "Access granted with success." %}</p>
-                                        <button data-request-id="{{ rq.id }}"
-                                                class="btn btn-success btn-sm btn-block confirm-group">{% trans "Confirm" %}</button>
+                                        <div class="col-xs-6 col-sm-4 col-md-3" style="margin-left: -15px">
+                                            <button data-request-id="{{ rq.id }}"
+                                                    class="btn btn-success btn-sm btn-block confirm-group">{% trans "Confirm" %}</button>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="clearfix"></div>
                             </section>
                         {% endwith %}
                     {% endfor %}
