--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -122,7 +122,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .inner-shade {box-shadow: inset 0 1px 3px rgba(0, 0, 0, .15);}
 .subtle-shade {box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);}
 #navbar {height: 55px;min-height: 50px;position: fixed;width: 100%;}
-.menu-button {float: left;margin: 20px 20px 0 10px;display: none;}
+.menu-button {float: left;margin: 20px 10px 0 10px;display: none;}
 .icon-bar {
     background: #fff;
     display: block;
@@ -198,7 +198,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     .ik-li .meta {display: block}
     .input-sm {font-size: 15px}
     #navbar > .container-fluid {padding: 0;}
-    .navbar-default .navbar-brand {max-width: 115px;overflow: hidden;padding-left: 0;}
+    .navbar-default .navbar-brand {max-width: 115px;overflow: hidden;}
     .navbar-default .navbar-brand > * {float: left; width: 300%}
     .container-fluid > strong.navbar-header {float: left;margin-left: 0;}
     #navbar-results {border-top: 1px solid #eee}
@@ -224,6 +224,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     }
     #user-menu-xs {display: none}
     .navbar-default .navbar-brand {padding: 19px 15px;}
+    #navbar .glyphicon.glyphicon-search {color: #708090;font-size: 15px;margin: 25px 0 0 10px;position: absolute} 
     #navbar-search {
         background: transparent;
         display: block;
@@ -241,6 +242,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
         float: right;
         width: 100%;
         margin-top: 5px;
+        padding-left: 35px;
     }
 
     form#search .spinner {
