--- a/static/ikwen/css/console.css
+++ b/static/ikwen/css/console.css
@@ -126,26 +126,30 @@
 #about ul li label {width: 90px}
 #about .actions {float: right; margin-top: 15px}
 #about .actions .btn {width: 150px;}
+.notice-cnsl .img {background: no-repeat center;background-size: cover;margin: auto;width: 100%}
 
-@media (min-width: 320px) {
+.access-request .member-name {font-weight: 700;}
+@media (max-width: 767px) {
     .access-request .logo img {float: left; width: 33px}
-    .access-request .logo h4 {float: left;font-weight: 700;margin-left: 15px;}
+    .access-request .member-name {float: left;margin-left: 15px;}
     .access-request .details {clear: both;padding-top: 10px;}
     .access-request .details .groups button {width: 160px}
+    .access-request .deny-access {float: right}
+    .notice-cnsl .img {height: 120px;}
 }
 @media (min-width: 768px) {
     .access-request .logo {float: left;text-align: center;width: 108px;}
     .access-request .logo img {float: none; width: 72px}
+    .access-request .member-name {margin-top: 15px;}
     .access-request .logo h4 {float: none; margin-left: 0}
-    .access-request .details {clear: none;float: left;margin-left: 15px;padding-top: 0;width: 570px;}
+    .access-request .details {clear: none;float: left;margin-left: 15px;padding-top: 0;width: 540px;}
+    .notice-cnsl .img {height: 135px}
 }
 @media (min-width: 992px) {
     #cover {max-width: 820px;}
     .access-request .logo {float: left;text-align: center;width: 130px;}
     .access-request .logo img {float: none; width: 100px}
 }
-
-.notice-cnsl .img {background: no-repeat center;background-size: 100%;margin: auto;height: 135px;width: 135px;}
 
 #ad-space-right {display: none}
 @media (min-width: 992px) {
