Menu button now correctly spaced from title to avoid misclicking

--- a/core/templates/core/base_admin.html
+++ b/core/templates/core/base_admin.html
@@ -13,7 +13,7 @@
 {% endblock %}
 {% block head_style %}
     {{ block.super }}
-    <link href="{% static 'ikwen/css/admin.css' %}?v=17.4" media="screen" rel="stylesheet" type="text/css" />
+    <link href="{% static 'ikwen/css/admin.css' %}" media="screen" rel="stylesheet" type="text/css" />
     <link href="{% static 'ikwen/css/console.css' %}" media="screen" rel="stylesheet" type="text/css" />
 {% endblock %}
 
