--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -191,7 +191,7 @@
         <script src="{% static 'ikwen/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'ikwen/hammerjs/hammer.min.js' %}"></script>
         <script src="{% static 'ikwen/hammerjs/jquery.hammer.js' %}"></script>
-        <script src="{% static 'ikwen/js/ikwen-util.js' %}?v=17.4"></script>
+        <script src="{% static 'ikwen/js/ikwen-util.js' %}"></script>
         {% block js %}
             <script>
                 (function() {
