--- a/static/ikwen/css/base.css
+++ b/static/ikwen/css/base.css
@@ -122,7 +122,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 .inner-shade {box-shadow: inset 0 1px 3px rgba(0, 0, 0, .15);}
 .subtle-shade {box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);}
 #navbar {height: 55px;min-height: 50px;position: fixed;width: 100%;}
-.menu-button {float: left;margin: 20px 10px 0 10px;display: none;}
+.menu-button {float: left;padding: 20px 10px 0 10px;display: none;}
 .icon-bar {
     background: #fff;
     display: block;
@@ -133,7 +133,7 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
 }
 #navbar .glyphicon {color: #fff;cursor: pointer;font-size: 18px;}
 #navbar .back {display: none;float:left;font-size: 24px;margin: 12px 15px 0 10px;}
-.navbar-default .navbar-brand {padding: 18px 0 0 10px;}
+.navbar-default .navbar-brand {padding: 18px 0 0 0;margin-left: 10px;}
  #navbar .navbar-header {height: 55px;overflow: hidden}
 #navbar-search {
     display: none;
@@ -217,13 +217,14 @@ time {color: #888;float: right;font-size: 11px; font-weight: normal; padding: 0;
     #content.container {padding-left: 15px;padding-right: 15px;}
     .form-wrapper {width: 360px}
     #navbar .navbar-header {float: left; height: auto}
-    .menu-button {cursor: pointer; margin: 21px 15px 0 0;}
+    .menu-button {cursor: pointer;padding: 21px 15px 0 0;}
     .icon-bar {
         width: 26px;
         height: 3px;
     }
     #user-menu-xs {display: none}
-    .navbar-default .navbar-brand {padding: 19px 15px;}
+    .navbar-default .navbar-brand {padding: 19px 15px 19px 0;}
+    .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {margin-left: 0}
     #navbar .glyphicon.glyphicon-search {color: #708090;font-size: 15px;margin: 25px 0 0 10px;position: absolute} 
     #navbar-search {
         background: transparent;
