STAFF_ROUTER issue fixed

--- a/accesscontrol/templates/accesscontrol/community.html
+++ b/accesscontrol/templates/accesscontrol/community.html
@@ -161,7 +161,7 @@
                                 <div class="btn-group" style="width: 100%">
                                     <button class="btn btn-warning btn-sm btn-block dropdown-toggle" style="text-align: left"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        {% trans "Move to group" %}&nbsp;&nbsp;&nbsp;...
+                                        <span>{% trans "Move to group" %}&nbsp;&nbsp;&nbsp;...</span>
                                         <span class="caret pull-right" style="margin-top: 8px"></span>
                                     </button>
                                     <ul class="dropdown-menu">
