--- a/accesscontrol/templates/accesscontrol/sign_in.html
+++ b/accesscontrol/templates/accesscontrol/sign_in.html
@@ -9,6 +9,8 @@
         #navbar .search, #navbar .navbar-right {display: none}
         label span {font-weight: normal}
         #terms-warning {color: #999; font-size: 11px}
+        .login-with-ikwen {font-size: 1em; letter-spacing: .5px; padding: 6px 9px 8px}
+        .login-with-ikwen strong {color: #7ea6ca}
     </style>
 {% endblock %}
 
@@ -21,7 +23,6 @@
         {% elif request.GET.successfulPasswordReset %}
             <p class="success" style="font-size: 1em; padding: 9px">{% trans "Your password was successfully reset, login now." %}</p>
         {% endif %}
-        {% if not request.GET.action or request.GET.action == 'login' or login_form %}
         <div id="login" class="form-wrapper">
             <h3 style="text-align: center">
                 <div style="margin-bottom: .3em; text-align: center">
@@ -43,7 +44,13 @@
                     <input id="lg-password" class="form-control input-sm password" type="password" name="password" />
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-primary btn-block btn-sm"> {% trans "Submit" %} </button>
+                    {% if settings.IS_UMBRELLA %}
+                        <button class="btn btn-primary btn-block btn-sm"> {% trans "Submit" %} </button>
+                    {% else %}
+                        <button class="btn btn-primary btn-block btn-sm login-with-ikwen">
+                            {% blocktrans %}Login with <strong>ikwen</strong>{% endblocktrans %}
+                        </button>
+                    {% endif %}
                     <a style="float: left; margin-top: 7px" href="{% url 'ikwen:forgotten_password' %}">{% trans "Forgotten password ?" %}</a>
                 </div>
             </form>
@@ -53,93 +60,6 @@
                    href="{% url 'ikwen:register' %}?{{ request.META.QUERY_STRING }}">{% trans "Register" %}</a>
             </div>
         </div>
-        {% else %}
-{#        <div style="border-right: 1px solid #DBE6FF; float: left; height: 90px; margin: 145px 0 0 162px"></div>#}
-        <div id="register" class="row">
-            <h2 class="col-sm-9 col-md-8 col-sm-offset-3 col-md-offset-4">{% trans "Register" %}</h2>
-            <form action="{% url 'ikwen:register' %}?{{ request.META.QUERY_STRING }}" method="post"
-                class="col-sm-9 col-md-8 col-sm-offset-3 col-md-offset-4 form-horizontal">{% csrf_token %}
-                <div class="form-group row">
-                    <label for="rg-username" class="col-sm-5 col-md-4">{% trans "Username or email" %}</label>
-                    <div class="col-sm-6 col-md-6">
-                        <input id="rg-username" class="form-control input-sm username" type="text" name="username" />
-                        {{ register_form.username.errors }}
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="rg-password1" class="col-sm-5 col-md-4">{% trans "Choose a password" %}</label>
-                    <div class="col-sm-6 col-md-6">
-                        <input id="rg-password1" class="form-control input-sm password" type="password" name="password" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="rg-password2" class="col-sm-5 col-md-4">{% trans "Confirm password" %}</label>
-                    <div class="col-sm-6 col-md-6">
-                        <input id="rg-password2" class="form-control input-sm confirm-password" type="password" name="password2" />
-                    </div>
-                </div>
-                <div class="form-group row email" style="height: 0; margin-bottom: 0; overflow: hidden">
-                    <label for="rg-email" class="col-sm-5 col-md-4">Email</label>
-                    <div class="col-sm-6 col-md-6">
-                        <input id="rg-email" class="form-control input-sm email" type="text" name="email" />
-                        {{ register_form.email.errors }}
-                    </div>
-                </div>
-                <div class="form-group row phone">
-                    <label for="rg-phone" class="col-sm-5 col-md-4">{% trans "Phone number" %} <span style="font-weight: normal">({% trans "Optional" %})</span></label>
-                    <div class="col-sm-6 col-md-6">
-                        <input id="rg-phone" class="form-control input-sm phone" type="text" name="phone" />
-                        {{ register_form.phone.errors }}
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="rg-first-name" class="col-sm-5 col-md-4">{% trans "First name" %} </label>
-                    <div class="col-sm-6 col-md-6">
-                        <input id="rg-first-name" class="form-control input-sm name" type="text" name="first_name"/>
-                        {{ register_form.name.errors }}
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label for="rg-last-name" class="col-sm-5 col-md-4">{% trans "Last name" %} </label>
-                    <div class="col-sm-6 col-md-6">
-                        <input id="rg-last-name" class="form-control input-sm name" type="text" name="last_name"/>
-                        {{ register_form.name.errors }}
-                    </div>
-                </div>
-                <div class="form-group row">
-                    {% if settings.IS_IKWEN %}
-                        <p id="terms-warning" class="col-sm-11 col-md-10">
-                            {% trans "By creating an account you agree our " %} <a href="{% url 'ikwen:terms_and_conditions' %}">{% trans "Terms & Conditions" %}</a>
-                        </p>
-                    {% else %}
-                        <p id="terms-warning" class="col-sm-11 col-md-10">
-                            {% trans "You are about to create an account managed by" %} <a
-                                href="{{ settings.IKWEN_BASE_URL }}"
-                                style="color: #999; text-decoration: underline"><strong>ikwen</strong></a>,
-                            {% trans "on" %} {{ service.project_name }}.
-                            {% trans "By doing so you accept" %} <a
-                                href="{% url 'ikwen:terms_and_conditions' %}"><strong>ikwen</strong> {% trans "Terms & Conditions" %}
-                        </a>, {% trans "as well as" %}
-                            <a href="{{ settings.AGREEMENT_URL }}">{{ service.project_name }} {% trans "Terms & Conditions" %}.</a>
-                        </p>
-                    {% endif %}
-                </div>
-                <div class="form-group row">
-                    <div class="checkbox" style="padding-left: 15px">
-                        <label>
-                            <input type="checkbox" checked /> {% trans "Yes, I read and accept." %}
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <div class="col-sm-4 col-md-3 col-sm-offset-7 col-md-offset-7">
-                        <button class="btn btn-primary btn-block btn-sm"> {% trans "Submit" %} </button>
-                    </div>
-                </div>
-            </form>
-        </div>
-        {% endif %}
-        <div></div>
         <div class="clear"></div>
     </div>
 {% endblock %}
