--- a/cashout/templates/cashout/payments.html
+++ b/cashout/templates/cashout/payments.html
@@ -1,5 +1,5 @@
 {% extends "core/app_base_admin.html" %}
-{% load i18n humanize staticfiles auth_tokens admin_list  %}
+{% load i18n l10n humanize staticfiles auth_tokens admin_list  %}
 
 {% block page_title %}
 <title> {% trans "Payments" %} - ikwen </title>
@@ -9,21 +9,40 @@
     {{ block.super }}
     <style>
         body {background: #f6f6f6}
-        #stage .subtle-shade {background: #fff; padding-bottom: 15px}
-        #stage h3 {font-size: 18px; font-weight: 700}
-        #stage .action {border-top: 1px solid #ddd; font-weight: 700;
+        #app-nav {background: #fff}
+        .box {background: #fff; padding: 10px}
+        .box h3 {font-size: 18px; font-weight: 700; margin-top: 0}
+        .box .action {border-top: 1px solid #ddd; font-weight: 700;
             margin-top: 2em; padding-top: 5px; text-align: right}
+        #wallet .balance {float: right; font-size: 1.5em; font-weight: 400}
         .listing {padding-left: 0; margin-top: 1.5em; min-height: 100px}
-        .listing li {list-style-type: none}
+        .listing li {display: block; float: left; padding-bottom: 7px; width: 100%}
         .payment-address {margin-top: 1em}
         .payment-address .img {border: 1px solid #ddd; border-radius: 3px; float: left; height: 85px;
-            padding: 14px 0 15px; text-align: center; width: 30%}
+            padding: 14px 0 15px; text-align: center; width: 40%}
         .payment-address .img img {height: 55px}
         .payment-address .details {float: left; font-size: .85em; margin: 2em 0 0 15px}
         .payment-address .details p {margin-bottom: 0}
         ul.actions {margin-left: -138px}
         #confirm-cash-out .spinner {height: 35px; margin-top: -30px}
         #show-addresses, .new-address {font-weight: 700; letter-spacing: 1px}
+        @media (max-width: 767px) {
+            #wallet {margin-bottom: 1em}
+            #addresses {margin-top: 1em}
+            #wallet .balance {font-size: .95em}
+            #show-addresses {margin-top: 1em}
+        }
+        @media (min-width: 768px) {
+            #wallet {margin-bottom: 2em}
+            .box {padding: 15px}
+            #wallet .box {padding-bottom: 20px}
+            .last-payment {margin-top: 1em}
+            .payment-address .img {border: 1px solid #ddd; border-radius: 3px; float: left; height: 85px;
+            padding: 14px 0 15px; text-align: center; width: 40%}
+        }
+        @media (min-width: 1200px) {
+            .payment-address .img {width: 24%}
+        }
     </style>
 {% endblock %}
 
@@ -32,75 +51,116 @@
 {% endblock %}
 
 {% block admin_content %}
-    <div id="admin-content" class="container-fluid change-form">
-        <div id="stage">
-            <div class="row subtle-shade" style="padding-bottom: 20px">
-                <div class="col-xs-12">
+    <div id="admin-content">
+        <div class="container-fluid">
+            <div id="wallet" class="col-xs-12">
+                <div class="box subtle-shade">
                     <h3>
                         <span>{% trans "Your balance" %}</span>
-                        <span style="float: right; font-size: 1.5em; font-weight: 400">{{ config.currency_symbol }} <span class="wallet-balance">{{ wallet.balance|floatformat:"2"|intcomma }}</span></span>
+                        <span class="balance">{{ config.currency_symbol }} <span class="wallet-balance">{{ wallet.balance|floatformat:config.decimal_precision|intcomma }}</span></span>
                     </h3>
+                    {% with last_payment=payments.0 %}
                     <div class="row" style="margin-top: 4em">
-                        <div class="col-sm-8 text-muted" style="margin-top: 1em">
-                            {% if payments %}
+                        <div class="col-sm-8 text-muted last-payment">
+                            {% if last_payment.status == 'Paid' %}
                                 <i class="glyphicon glyphicon-calendar"></i>
-                                {% trans "Your last payment was on" %} {{ payments.0.created_on|time:"TIME_FORMAT" }}
+                                {% trans "Your last payment was on" %} {{ last_payment.created_on|date }}
                             {% else %}
                                 {% trans "No payment yet" %}
                             {% endif %}
                         </div>
-                        <div class="col-sm-4">
-                        {% if wallet.balance > 0 %}
-                            {%if wallet.balance >= config.cash_out_min %}
-                            <button id="show-addresses" class="btn btn-primary btn-sm pull-right"
-                                    data-toggle="modal" data-target="#confirm-cash-out">{% trans "REQUEST A PAYMENT" %}</button>
-                                <p class="request-result alert alert-success" style="display: none">{% trans "Request successful" %}</p>
-                                <p class="request-result alert alert-danger" style="display: none">{% trans "Request successful" %}</p>
-                            {% else %}
-                                <div class="text-muted" style="margin-top: 1em">
-                                    {% trans "You can cash out as from" %} {{ config.currency_symbol }} {{ config.cash_out_min|intcomma }}
-                                </div>
+                        <div class="col-sm-4" style="text-align: right">
+                        {% if wallet.balance > 0 and wallet.balance >= cash_out_min %}
+                            {% if not last_payment or last_payment.status != 'Pending' %}
+                                <button id="show-addresses" class="btn btn-primary btn-sm pull-right"
+                                        data-toggle="modal" data-target="#confirm-cash-out">{% trans "REQUEST A PAYMENT" %}</button>
+                                    <p class="request-result text-success" style="display: none">{% trans "Request successful" %}</p>
+                                    <p class="request-result text-danger" style="display: none">{% trans "Request failed" %}</p>
                             {% endif %}
+                        {% else %}
+                            <div class="text-muted" style="margin-top: 1em">
+                                {% trans "You can cash out as from" %} {{ config.currency_symbol }} {{ config.cash_out_min|intcomma }}
+                            </div>
                         {% endif %}
                         </div>
                     </div>
+                    {% endwith %}
+                    <div class="clearfix"></div>
                 </div>
             </div>
-            <div class="row" style="margin-top: 2em">
-                <div class="col-sm-6 report subtle-shade" style="width: 49%">
-                    <h3>
-                        <span>{% trans "Payments" %}</span>
-{#                        <a class="pull-right" style="cursor: pointer; font-weight: 400; font-size: 13px">{% trans "View all" %}</a>#}
-                    </h3>
-                    <div>
-                        <ul class="listing">
-                            {% for tx in payments %}
-                                <li style="padding-bottom: 5px">
-                                    <span>{{ tx.created_on|time:"TIME_FORMAT" }}</span>
-                                    <span class="pull-right text-muted">{{ config.currency_symbol }} {{ tx.amount|intcomma }}</span>
-                                </li>
-                            {% empty %}
-                                <li>
-                                    <p class="text-muted">{% trans "No payment yet" %}</p>
-                                </li>
-                            {% endfor %}
-                        </ul>
+            <div style="clear: both">
+                <div class="col-sm-6">
+                    <div class="box report subtle-shade">
+                        <h3>
+                            <span>{% trans "Payments" %}</span>
+    {#                        <a class="pull-right" style="cursor: pointer; font-weight: 400; font-size: 13px">{% trans "View all" %}</a>#}
+                        </h3>
+                        <div>
+                            <ul class="listing">
+                                {% for tx in payments %}
+                                    <li>
+                                        <span>
+                                            {{ tx.created_on|date }}
+                                            {% if tx.status == 'Pending' %}
+                                            <span class="label label-warning">{% trans "Pending" %}</span>
+                                            {% endif %}
+                                        </span>
+                                        <span class="pull-right text-muted">{{ config.currency_symbol }} {{ tx.amount|intcomma }}</span>
+                                    </li>
+                                {% empty %}
+                                    <li>
+                                        <p class="text-muted">{% trans "No payment yet" %}</p>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                        <div class="clearfix"></div>
                     </div>
                 </div>
-                <div id="addresses" class="col-sm-6 subtle-shade pull-right" style="width: 49%">
-                    <h3>{% trans "How you get paid" %}</h3>
-                    <div>
-                        <ul class="listing">
-                            {% for address in payment_addresses %}
-                                <li class="payment-address" id="{{ address.id }}">
+                <div id="addresses" class="col-sm-6">
+                    <div class="box subtle-shade">
+                        <h3>{% trans "How you get paid" %}</h3>
+                        <div>
+                            <ul class="listing">
+                                {% for address in payment_addresses %}
+                                    <li class="payment-address" id="{{ address.id }}">
+                                        <div class="img">
+                                            {% if address.method.image.name %}
+                                                <img src="{{ settings.IKWEN_MEDIA_URL }}{{ address.method.image.name }}" />
+                                            {% endif %}
+                                        </div>
+                                        <div class="details">
+                                            <p>{{ address.account_number|slice:"0:2" }} • • • {{ address.account_number|slice:"-3:" }}</p>
+                                            <p class="text-muted">{{ address.name }}</p>
+                                        </div>
+                                        <div class="dropdown" style="cursor: pointer; float: right">
+                                            <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                                <i class="glyphicon glyphicon-option-vertical text-muted"></i>
+                                            </span>
+                                            <ul class="actions dropdown-menu" aria-labelledby="period">
+                                                <li class="update-address" data-id="{{ address.id }}" data-method-id="{{ address.method.id }}"
+                                                    data-account-number="{{ address.account_number }}" data-name="{{ address.name }}">
+                                                    <a>{% trans "Update" %}</a>
+                                                </li>
+                                                <li class="delete-address" data-id="{{ address.id }}">
+                                                    <a>{% trans "Delete" %}</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="clearfix"></div>
+                                    </li>
+                                {% empty %}
+                                    <li class="text-muted empty" style="margin-top: 2em">
+                                        <span style="padding-right: 15px">{% trans "No payment method set" %}</span>
+                                    </li>
+                                {% endfor %}
+                                <li class="payment-address tpl" style="display: none">
                                     <div class="img">
-                                        {% if address.method.image.name %}
-                                            <img src="{{ settings.IKWEN_MEDIA_URL }}{{ address.method.image.name }}" />
-                                        {% endif %}
+                                        <img />
                                     </div>
                                     <div class="details">
-                                        <p>{{ address.account_number|slice:"0:2" }} • • • {{ address.account_number|slice:"-3:" }}</p>
-                                        <p class="text-muted">{{ address.name }}</p>
+                                        <p class="account-number"> • • • </p>
+                                        <p class="text-muted name"></p>
                                     </div>
                                     <div class="dropdown" style="cursor: pointer; float: right">
                                         <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -111,47 +171,21 @@
                                                 data-account-number="{{ address.account_number }}" data-name="{{ address.name }}">
                                                 <a>{% trans "Update" %}</a>
                                             </li>
-                                            <li class="delete-address" data-id="{{ address.id }}">
+                                            <li class="delete-address">
                                                 <a>{% trans "Delete" %}</a>
                                             </li>
                                         </ul>
                                     </div>
                                     <div class="clearfix"></div>
                                 </li>
-                            {% empty %}
-                                <li class="text-muted empty" style="margin-top: 2em">
-                                    <span style="padding-right: 15px">{% trans "No payment method set" %}</span>
-                                </li>
-                            {% endfor %}
-                            <li class="payment-address tpl">
-                                <div class="img">
-                                    <img />
-                                </div>
-                                <div class="details">
-                                    <p class="account-number"> • • • </p>
-                                    <p class="text-muted name"></p>
-                                </div>
-                                <div class="dropdown" style="cursor: pointer; float: right">
-                                    <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                        <i class="glyphicon glyphicon-option-vertical text-muted"></i>
-                                    </span>
-                                    <ul class="actions dropdown-menu" aria-labelledby="period">
-                                        <li class="update-address" data-id="{{ address.id }}" data-method-id="{{ address.method.id }}"
-                                            data-account-number="{{ address.account_number }}" data-name="{{ address.name }}">
-                                            <a>{% trans "Update" %}</a>
-                                        </li>
-                                        <li class="delete-address">
-                                            <a>{% trans "Delete" %}</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="clearfix"></div>
-                            </li>
-                        </ul>
-                        <button class="btn btn-sm btn-primary new-address pull-right"
-                                data-toggle="modal" data-target="#update-payment-address">{% trans "ADD NEW" %}</button>
+                            </ul>
+                            <button class="btn btn-sm btn-primary new-address pull-right"
+                                    data-toggle="modal" data-target="#update-payment-address">{% trans "ADD NEW" %}</button>
+                        </div>
+                        <div class="clearfix"></div>
                     </div>
                 </div>
+                <div class="clearfix"></div>
             </div>
         </div>
     </div>
@@ -189,12 +223,12 @@
                             </div>
                         </div>
                     </form>
-                    <div style="clear: both; padding-top: 2em">
-                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
+                    <div class="actions">
+                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right action">
                             <button class="btn btn-success btn-block btn-sm ok"
                                     data-dismiss="modal" aria-label="OK">OK</button>
                         </div>
-                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
+                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right action">
                             <button class="btn btn-default btn-block btn-sm"
                                     data-dismiss="modal" aria-label="Close">{% trans "Cancel" %}</button>
                         </div>
@@ -225,12 +259,12 @@
                             </div>
                         </div>
                     </form>
-                    <div style="clear: both; padding-top: 2em">
-                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
+                    <div class="actions">
+                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right action">
                             <button class="btn btn-success btn-block btn-sm ok" aria-label="OK">OK</button>
                             {% include 'core/snippets/spinner.html' %}
                         </div>
-                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right">
+                        <div class="col-xs-12 col-sm-4 col-md-3 pull-right action">
                             <button class="btn btn-default btn-block btn-sm"
                                     data-dismiss="modal" aria-label="Close">{% trans "Cancel" %}</button>
                         </div>
@@ -306,10 +340,10 @@
                     if (resp.success) {
                         $('#show-addresses, #confirm-cash-out .spinner').hide();
                         $('#confirm-cash-out').modal('hide');
-                        $('.wallet-balance').text(0);
-                        $('.request-result.alert-success').show();
+{#                        $('.wallet-balance').text(0);#}
+                        $('.request-result.text-success').show();
                     } else {
-                        $('.request-result.alert-danger').text(resp.error).show();
+                        $('.request-result.text-danger').text(resp.error).show();
                     }
                 })
             })
