Dimensions of cover image now shown to user

--- a/core/templates/core/snippets/banner_and_pp_uploader.html
+++ b/core/templates/core/snippets/banner_and_pp_uploader.html
@@ -34,6 +34,6 @@
         };
         var label = "{% if is_company %}{% trans "Change logo" %}{% else %}{% trans "Change photo" %}{% endif %}";
         ikwen.initUploader('#banner .photo .upload-image', label, 'profile', '#banner .photo');
-        ikwen.initUploader('#banner > .upload-image', "{% trans "Change cover" %}", 'cover', '#cover');
+        ikwen.initUploader('#banner > .upload-image', "{% trans "Cover" %} (1000px x 390px)", 'cover', '#cover');
     })()
 </script>
